# Smart_AI_Study_Companion

./: .gitignore  Procfile  README.md  pyproject.toml  render-build.sh  render.yaml
backend/: .env.example  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: explain_prompt.py  flashcard_prompt.py  qa_prompt.py  quiz_prompt.py
backend/app/routes/: ask.py  explain.py  flashcards.py  health.py  quiz.py  upload.py  voice.py
backend/app/services/: chunker.py  document_loader.py  embedder.py  json_parser.py  llm_service.py  rag_engine.py  stt_service.py  tts_service.py  vector_store.py
frontend/: requirements.txt  streamlit_app.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_📁_Upload.py  2_💡_Explain.py  3_🧪_Quiz.py  4_🎙️_Voice_QA.py  5_🃏_Flashcards.py
