[project]
name = "smart-ai-study-companion"
version = "1.0.0"
description = "AI-powered study tool: upload notes → explanations, quizzes, and voice Q&A via RAG + Groq LLM"
requires-python = "==3.11.14"

dependencies = [
    # ── Web Framework ────────────────────────────────────────────────────────
    "fastapi==0.111.0",               # REST API framework
    "uvicorn[standard]==0.29.0",      # ASGI server to run FastAPI

    # ── Frontend ─────────────────────────────────────────────────────────────
    "streamlit==1.35.0",              # Browser UI (Upload, Explain, Quiz, Voice pages)

    # ── LLM — Groq (free, Llama-3.3-70B) ────────────────────────────────────
    "groq==0.9.0",                    # Official Groq Python SDK

    # ── Embeddings (runs locally, no API key needed) ──────────────────────────
    "sentence-transformers==2.7.0",   # all-MiniLM-L6-v2 model

    # ── Vector Database (local, persistent) ──────────────────────────────────
    "chromadb==0.5.3",                # Embedded vector store for similarity search

    # ── Document Parsing ─────────────────────────────────────────────────────
    "pdfplumber==0.11.0",             # Extract text from PDFs
    "pytesseract==0.3.10",            # OCR wrapper for Tesseract (images → text)
    "Pillow==10.3.0",                 # Image handling (required by pytesseract)

    # ── Speech-to-Text ───────────────────────────────────────────────────────
    # openai-whisper is installed separately — see INSTALL NOTE below.
    # Its legacy setup.py imports pkg_resources but never declares it as a build
    # dependency, which breaks under setuptools 71+. The workaround is a one-time
    # manual install with --no-build-isolation (see README / instructions below).
    "setuptools>=68.0.0,<71.0.0",    # pkg_resources shim — required by openai-whisper at runtime

    # ── Text-to-Speech ───────────────────────────────────────────────────────
    "gTTS==2.5.1",                    # Google TTS — converts LLM answers to MP3 audio

    # ── Text Chunking ────────────────────────────────────────────────────────
    "langchain-text-splitters==0.2.1", # RecursiveCharacterTextSplitter (500 tok / 50 overlap)

    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv==1.0.1",           # Load GROQ_API_KEY and other secrets from .env
    "python-multipart==0.0.9",        # FastAPI file upload support
    "pydantic==2.7.1",                # Request/response validation (bundled with FastAPI)
    "numpy==1.26.4",                  # Required by sentence-transformers
    "requests==2.32.3",               # Streamlit home page uses this to ping /health
    "audio-recorder-streamlit==0.0.8", # Microphone recording widget for Voice Q&A page
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "httpx==0.27.0",                  # async test client for FastAPI
]

# ── uv settings ──────────────────────────────────────────────────────────────
[tool.uv]
# This is an app, not a library — tell uv not to try to install the project
# itself as a package (avoids hatchling "no package found" errors).
package = false
# uv.lock is auto-generated by `uv sync` — commit it so every collaborator
# gets byte-for-byte identical installs.

# ════════════════════════════════════════════════════════════════════════════
# INSTALL NOTE — openai-whisper (run ONCE after `uv sync`):
#
#   uv pip install openai-whisper==20231117 --no-build-isolation
#
# Reason: openai-whisper uses a legacy setup.py that imports pkg_resources
# but never declares it as a build dependency. setuptools >= 71 broke this.
# --no-build-isolation bypasses the clean sandbox and uses the venv's own
# setuptools (pinned to <71 above) which still exposes pkg_resources correctly.
# ════════════════════════════════════════════════════════════════════════════
